--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="nav-bar">
+        <span class="header-logo">Header Logo</span>
+        <nav class="main-nav">
+          <ul class="menu">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </nav>
+        <div class="hero">
+          <div class="hero-text">
+            <h1 class="main-heading">This website is awesome</h1>
+            <p class="value-proposition">
+              This website has some subtext that goes here under the website
+              main title. It's a smaller font and the color is lower contrast
+            </p>
+            <a href="#" class="btn-cta">Sign up</a>
+          </div>
+          <div class="hero-img">This is a placeholder for an image</div>
+        </div>
+      </div>
+    </header>
+    <main class="main-content"></main>
+    <footer class="footer">
+      <p class="legal">
+        Copyright &copy; The Odin Project 2021 - coded by
+        <span class="author">Lawell Wilhelm</span>
+      </p>
+    </footer>
+  </body>
 </html>
