Add style to the header and the footer sections

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   </head>
   <body>
     <header class="header">
-      <div class="nav-bar">
-        <span class="header-logo">Header Logo</span>
-        <nav class="main-nav">
-          <ul class="menu">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-          </ul>
-        </nav>
+      <div class="row">
+        <div class="nav-bar">
+          <span class="header-logo">Header Logo</span>
+          <nav class="main-nav">
+            <ul class="menu">
+              <li><a href="#">header link one</a></li>
+              <li><a href="#">header link two</a></li>
+              <li><a href="#">header link three</a></li>
+            </ul>
+          </nav>
+        </div>
         <div class="hero">
           <div class="hero-text">
             <h1 class="main-heading">This website is awesome</h1>
@@ -33,10 +35,7 @@
     </header>
     <main class="main-content"></main>
     <footer class="footer">
-      <p class="legal">
-        Copyright &copy; The Odin Project 2021 - coded by
-        <span class="author">Lawell Wilhelm</span>
-      </p>
+      <p class="legal">Copyright &copy; The Odin Project 2021</p>
     </footer>
   </body>
 </html>
