Add the call to action section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
         </div>
       </div>
     </header>
-    <main class="main-content"></main>
+    <main class="main-content">
+      <section class="cta">
+        <div class="row">
+          <div class="cta-banner">
+            <div class="cta-text">
+              <h2>Call to action! It's time!</h2>
+              <p>
+                Sign up for our product by clicking that button right over
+                there!
+              </p>
+            </div>
+            <a href="#" class="btn-cta">Sign up</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
       <p class="legal">Copyright &copy; The Odin Project 2021</p>
     </footer>
