--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- HEADER -->
     <header class="header">
       <div class="row">
+        <!-- NAVIGATION BAR -->
         <div class="nav-bar">
+          <!-- LOGO -->
           <span class="header-logo">Header Logo</span>
+          <!-- MAIN NAV -->
           <nav class="main-nav">
             <ul class="menu">
               <li><a href="#">header link one</a></li>
@@ -20,6 +24,8 @@
             </ul>
           </nav>
         </div>
+
+        <!-- HERO -->
         <div class="hero">
           <div class="hero-text">
             <h1 class="main-heading">This website is awesome</h1>
@@ -33,7 +39,22 @@
         </div>
       </div>
     </header>
+
+    <!-- MAIN CONTENT -->
     <main class="main-content">
+      <!-- TESTIMONIAL SECTION -->
+      <section class="testimonial">
+        <blockquote>
+          <p>
+            This is an inspiring quote, or testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </p>
+          <span>- Thor, God of Thunder</span>
+        </blockquote>
+      </section>
+
+      <!-- CALL TO ACTION SECTION -->
       <section class="cta">
         <div class="row">
           <div class="cta-banner">
@@ -49,6 +70,8 @@
         </div>
       </section>
     </main>
+
+    <!-- FOOTER -->
     <footer class="footer">
       <p class="legal">Copyright &copy; The Odin Project 2021</p>
     </footer>
