Add the information section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,36 @@
 
     <!-- MAIN CONTENT -->
     <main class="main-content">
+      <!-- INFORMATION -->
+      <section class="info">
+        <h2>Some random information</h2>
+        <div class="info-items">
+          <figure class="info-item">
+            <div class="info-img-placeholder">&nbsp;</div>
+            <figcaption class="info-text">
+              this is some subtext under an illustration or image
+            </figcaption>
+          </figure>
+          <figure class="info-item">
+            <div class="info-img-placeholder">&nbsp;</div>
+            <figcaption class="info-text">
+              this is some subtext under an illustration or image
+            </figcaption>
+          </figure>
+          <figure class="info-item">
+            <div class="info-img-placeholder">&nbsp;</div>
+            <figcaption class="info-text">
+              this is some subtext under an illustration or image
+            </figcaption>
+          </figure>
+          <figure class="info-item">
+            <div class="info-img-placeholder">&nbsp;</div>
+            <figcaption class="info-text">
+              this is some subtext under an illustration or image
+            </figcaption>
+          </figure>
+        </div>
+      </section>
       <!-- TESTIMONIAL SECTION -->
       <section class="testimonial">
         <blockquote>
